feat: #1543 Caching the ScriptEngine and moving from bindings to ScriptContext Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>